# dossier

./: .gitignore  README.md  dossier.code-workspace
dossier-frontend/dossier/: .env.example  package.json
dossier-frontend/dossier/scripts/: generate_platforms_map.py
dossier-frontend/dossier/src/: app.html
dossier-frontend/dossier/src/lib/: AddressSearch.svelte  Header.svelte  LoadingState.svelte  Map.svelte  PersonCard.svelte  SearchBar.svelte  SocialDropdown.svelte  api.ts  index.ts  platforms.json  platforms_map.json  stores.ts
dossier-frontend/dossier/src/routes/: +layout.svelte  +page.svelte
dossier-frontend/dossier/src/routes/add/: +page.svelte
dossier-frontend/dossier/src/routes/login/: +page.svelte
dossier-frontend/dossier/src/routes/people/: +page.svelte
dossier-frontend/dossier/src/routes/people/[id]/: +page.svelte
dossier-frontend/dossier/src/routes/setup/: +page.svelte
dossier_api/: alembic.ini  pyproject.toml  ruff.toml
dossier_api/dossier/: __init__.py  db.py  main.py  schemas.py
dossier_api/dossier/api/: __init__.py  addresses.py  auth.py  people.py  sherlock.py
dossier_api/dossier/models/: __init__.py  people.py  sherlock_jobs.py  users.py
dossier_api/migrations/: env.py
dossier_api/migrations/versions/: 20250911_init.py
